--- a/style.css
+++ b/style.css
@@ -1,4 +1,5 @@
 @charset "utf-8";
+@import  "reset.scss";
 
 *{margin: 0px; padding: 0px; box-sizing: border-box;}
 ul,ol,li{
@@ -11,28 +12,33 @@ a{
   position: absolute; top: -9999999999px; opacity: 0;
 }
 
-#box{
-  width: 100%; height: 100vh; 
-  /* 전체화면 공식 */
-  background-color: #efefef;
-  padding: 150px 0;
-}
+/* 
+부모 태그에 적용하는 속성 
 
-#box .inner{
-  width: 1180px;
-  margin: 0 auto;
-  position: relative;
+display
+flex-direction
+frex-wrap
+flex-flow =(flex-direction, flex-wrap)
+justyfy-content
+align-items
+aline-content
 
-}
+자식요소에 적용하는 속성
+order
+flex-grow
+flex-shrink
+flex(basics)
+align-self
+display-
+flex
+: 자신은  블록 속성을 유지하고 자식 요소에 flex환경을 설정 한다 
+inline-flex
+:자신은 인라인 속성을 유지하고 자식 요소에 flex환경을 설정 한다 
 
-#box .inner .wrap{
-  width:100%;
-}
-#box .inner .wrap::after{ 
-  content: ''; display: block; clear: both;
-}
-#box .inner > .wrap >article{ 
-width :280px ; height:200px; float:left;
-margin-right:20px; background-color:white;
-padding:35px 30px;
-}
+flex-direction
+-자식 요소의 정렬 방향을 변경
+row - 기본축이 가로로 정렬(기본값) 왼족에서 오른쪽
+column - 기본축이 세로로 정렬위에서 아래로 
+row-reverse -가로로 정렬하는데 오른쪽에서 왼쪽 
+
+*/
