--- a/css/style.css
+++ b/css/style.css
@@ -161,5 +161,50 @@ main section article:hover .inner figure {
   transform: translateY(3vh);
   filter: saturate(100%);
 }
+main aside {
+  width: 100%;
+  height: 100vh;
+  background: #222;
+  position: absolute;
+  top: 0;
+  left: -100%;
+  opacity: 0;
+  display: flex;
+  justify-content: space-between;
+  padding: 20vh 7vw 14vh 20vw;
+  z-index: 2;
+  transition: 1s;
+}
+main aside.on {
+  opacity: 1;
+  left: 0%;
+}
+main aside .txt {
+  width: 25%;
+  height: 100%;
+}
+main aside .txt h2 {
+  font: normal 6vw/1 "Alegreya Sans SC", sans-serif;
+  color: #ddd;
+  margin-bottom: 20px;
+}
+main aside .txt p {
+  font: 1.1vw/1.3 "arial";
+  color: #666;
+  margin-bottom: 60px;
+}
+main aside .txt span {
+  cursor: pointer;
+  color: orange;
+}
+main aside figure {
+  width: 72%;
+  height: 100%;
+}
+main aside figure video {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
 
 /*# sourceMappingURL=style.css.map */
