--- a/scss/style.scss
+++ b/scss/style.scss
@@ -166,5 +166,50 @@ main {
       }
     }
   }
+  aside {
+    width: 100%;
+    height: 100vh;
+    background: #222;
+    position: absolute;
+    top: 0;
+    left: -100%;
+    opacity: 0;
+    display: flex;
+    justify-content: space-between;
+    padding: 20vh 7vw 14vh 20vw;
+    z-index: 2;
+    transition: 1s;
+    &.on {
+      opacity: 1;
+      left: 0%;
+    }
+    .txt {
+      width: 25%;
+      height: 100%;
+      h2 {
+        font: normal 6vw/1 'Alegreya Sans SC', sans-serif;
+        color: #ddd;
+        margin-bottom: 20px;
+      }
+      p {
+        font: 1.1vw/1.3 "arial";
+        color: #666;
+        margin-bottom: 60px;
+      }
+      span {
+        cursor: pointer;
+        color: orange;
+      }
+    }
+    figure {
+      width: 72%;
+      height: 100%;
+      video {
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+      }
+    }
   }
+}
 
